@@ -1,7 +1,6 @@
 package io.github.cdsap.gcreport.plugin
 
 import org.gradle.testkit.runner.GradleRunner
-import org.junit.jupiter.api.Assertions.assertEquals
 import org.junit.jupiter.api.Assertions.assertFalse
 import org.junit.jupiter.api.Assertions.assertTrue
 import org.junit.jupiter.api.Test
@@ -13,60 +12,19 @@ class GCReportServiceRegistrationTest {
     lateinit var testProjectDir: File
 
     @Test
-    fun `GCReportService has a single registration path delegated to ServiceHandler`() {
-        val mainKotlin = File("src/main/kotlin")
-        require(mainKotlin.isDirectory) { "Expected Kotlin sources at ${mainKotlin.absolutePath}" }
+    fun `main sources do not use println`() {
+        val mainSources = File("src/main")
+        require(mainSources.isDirectory) { "Expected sources at ${mainSources.absolutePath}" }
 
-        val kotlinSources =
-            mainKotlin.walkTopDown().filter { it.isFile && it.extension == "kt" }.toList()
+        val offenders =
+            mainSources
+                .walkTopDown()
+                .filter { it.isFile && it.extension in setOf("kt", "java") }
+                .filter { it.readText().contains("println(") }
+                .map { it.relativeTo(mainSources).path }
+                .toList()
 
-        assertTrue(kotlinSources.any { it.name == "ServiceHandler.kt" })
-        assertTrue(kotlinSources.none { it.name == "ConsoleReport.kt" })
-
-        val registrationSites =
-            kotlinSources.filter { source ->
-                val text = source.readText()
-                text.contains("\"gcReportService\"") && text.contains("registerIfAbsent")
-            }
-
-        assertEquals(1, registrationSites.size, "expected exactly one GCReportService registration path")
-        assertEquals("ServiceHandler.kt", registrationSites.single().name)
-
-        val serviceHandler = registrationSites.single().readText()
-        assertTrue(serviceHandler.contains("enabledReport"))
-        assertTrue(serviceHandler.contains("histogramEnabled"))
-        assertTrue(serviceHandler.contains("histogramBucket"))
-        assertTrue(serviceHandler.contains("buildOutput"))
-        assertTrue(serviceHandler.contains("parameters.logs"))
-        assertTrue(serviceHandler.contains("parameters.logs.set("))
-        assertTrue(serviceHandler.contains("parameters.enabledReport.convention(true)"))
-        assertFalse(serviceHandler.contains("project.provider"))
-
-        val plugin = kotlinSources.single { it.name == "GCReportPlugin.kt" }.readText()
-        assertTrue(plugin.contains("ServiceHandler"))
-        assertFalse(plugin.contains("registerIfAbsent"))
-        assertFalse(plugin.contains("\"gcReportService\""))
-        assertTrue(plugin.contains("histogramEnabled.convention(false)"))
-        assertTrue(plugin.contains("histogramBucket.convention("))
-        assertTrue(plugin.contains("enableConsoleLog.convention(false)"))
-
-        val service = kotlinSources.single { it.name == "GCReportService.kt" }.readText()
-        assertTrue(service.contains("val logs: ListProperty<String>"))
-        assertTrue(service.contains("val histogramEnabled: Property<Boolean>"))
-        assertTrue(service.contains("val histogramBucket: Property<Bucket>"))
-        assertTrue(service.contains("val buildOutput: DirectoryProperty"))
-        assertTrue(service.contains("val enabledReport: Property<Boolean>"))
-        assertFalse(service.contains("var logs:"))
-        assertFalse(service.contains("Provider<List<String>>"))
-
-        val extension = kotlinSources.single { it.name == "GCReportExtension.kt" }.readText()
-        assertTrue(extension.contains("abstract class GCReportExtension"))
-        assertTrue(extension.contains("abstract val logs: ListProperty<String>"))
-        assertTrue(extension.contains("abstract val histogramEnabled: Property<Boolean>"))
-        assertTrue(extension.contains("abstract val histogramBucket: Property<Bucket>"))
-        assertTrue(extension.contains("abstract val enableConsoleLog: Property<Boolean>"))
-        assertFalse(extension.contains("ObjectFactory"))
-        assertFalse(extension.contains("open class GCReportExtension"))
+        assertTrue(offenders.isEmpty(), "println found in src/main: $offenders")
     }
 
     @Test
@@ -108,6 +66,57 @@ class GCReportServiceRegistrationTest {
             gcReport {
                 logs.set(listOf("$gcLog"))
                 enableConsoleLog.set(false)
+            }
+            """,
+        )
+
+        val result =
+            GradleRunner.create()
+                .withProjectDir(testProjectDir)
+                .withArguments("tasks")
+                .withPluginClasspath()
+                .build()
+
+        assertTrue(result.output.contains("GC Log: gc.log"))
+        assertTrue(result.output.contains("Collection type"))
+        assertTrue(testProjectDir.resolve("build/reports/gcreport/gc.csv").exists())
+    }
+
+    @Test
+    fun `with Develocity enableConsoleLog true enables console report output`() {
+        val gradleProperties = File(testProjectDir, "gradle.properties")
+        val gcLog = "${testProjectDir.absolutePath}/gc.log"
+        gradleProperties.writeText(
+            """
+            org.gradle.jvmargs=-Xlog:gc*:file=$gcLog
+            """.trimIndent(),
+        )
+
+        val settingsGradle = File(testProjectDir, "settings.gradle.kts")
+        settingsGradle.writeText(
+            """
+            plugins {
+                id("com.gradle.develocity") version "3.19"
+            }
+            develocity {
+                buildScan {
+                    publishing.onlyIf { false }
+                }
+            }
+            """.trimIndent(),
+        )
+
+        val buildFile = File(testProjectDir, "build.gradle.kts")
+        buildFile.writeText(
+            """
+            plugins {
+                id("io.github.cdsap.gcreport")
+                java
+            }
+
+            gcReport {
+                logs.set(listOf("$gcLog"))
+                enableConsoleLog.set(true)
             }
             """,
         )
@@ -213,6 +222,42 @@ class GCReportServiceRegistrationTest {
         assertTrue(result.output.contains("Type: SquareRoot"))
         assertTrue(testProjectDir.resolve("build/reports/gcreport/gc.csv").exists())
         assertTrue(testProjectDir.resolve("build/reports/gcreport/histogram_gc.csv").exists())
+    }
+
+    @Test
+    fun `apply reuses extension instance and looks up Develocity inside rootProject receiver`() {
+        val plugin =
+            File("src/main/kotlin/io/github/cdsap/gcreport/plugin/GCReportPlugin.kt").readText()
+
+        assertTrue(
+            plugin.contains("target.extensions.create(\"gcReport\", GCReportExtension::class.java)"),
+        )
+        assertFalse(plugin.contains("getByName(\"gcReport\")"))
+        assertFalse(plugin.contains("as GCReportExtension"))
+
+        val applyBody =
+            plugin
+                .substringAfter("override fun apply(target: Project) {")
+                .substringBeforeLast("}")
+                .trim()
+        val rootProjectBlockStart = applyBody.indexOf("target.gradle.rootProject {")
+        assertTrue(rootProjectBlockStart >= 0, "expected rootProject receiver block")
+
+        val beforeRootProject = applyBody.substring(0, rootProjectBlockStart)
+        assertFalse(
+            beforeRootProject.contains("DevelocityPresence.findExtension"),
+            "Develocity lookup must not run eagerly before the rootProject block",
+        )
+
+        val rootProjectBlock = applyBody.substring(rootProjectBlockStart)
+        assertTrue(
+            rootProjectBlock.contains("DevelocityPresence.findExtension(rootProject)"),
+            "Develocity lookup should use the rootProject Action parameter",
+        )
+        assertFalse(
+            rootProjectBlock.contains("DevelocityPresence.findExtension(target.gradle.rootProject)"),
+            "unused rootProject block: lookup should not re-qualify through target.gradle.rootProject",
+        )
     }
 
     private fun kotlinSources(): List<File> = File("src/main/kotlin").walkTopDown().filter { it.isFile && it.extension == "kt" }.toList()
